# Svyat

./: README.md
hillel-catering-api-2025-main/: .env.example  .gitignore  Dockerfile.test  Pipfile  README.md  compose.yaml  dishes.csv  docker-compose.yaml  dockerfile  makefile  pyproject.toml
hillel-catering-api-2025-main/.github/workflows/: cicd.yml  deploy.yml  main.yml
hillel-catering-api-2025-main/config/: celery.py  settings.py  urls.py
hillel-catering-api-2025-main/docs/: ORM.py  architecture.excalidraw  auth.excalidraw  caching.excalidraw  client server.excalidraw  databases.md  django.excalidraw  envs.excalidraw  filters.excalidraw  mailing.excalidraw  poc.py  project.excalidraw  project_management.excalidraw  tmp.py  versions.excalidraw
hillel-catering-api-2025-main/docs/HW/: 17.md  18.md  19.md  22.md
hillel-catering-api-2025-main/fixtures/: dump.json
hillel-catering-api-2025-main/food/: admin.py  enums.py  mapper.py  models.py  services.py  tasks.py  views.py
hillel-catering-api-2025-main/food/migrations/: 0001_initial.py  0002_order_total_alter_dish_restaurant_and_more.py
hillel-catering-api-2025-main/food/providers/: __init__.py  kfc.py  silpo.py  uber.py
hillel-catering-api-2025-main/http/: silpo.http
hillel-catering-api-2025-main/shared/: cache.py
hillel-catering-api-2025-main/tests/: foo.py
hillel-catering-api-2025-main/tests/integration/: test_food.py  test_user.py
hillel-catering-api-2025-main/tests/providers/: kfc.py  silpo.py  uber.py  (+1 more)
hillel-catering-api-2025-main/users/: admin.py  models.py  services.py  tasks.py  views.py
(+38 files in other folders)
