[tool.poetry]
name = "hillel-catering-api"
version = "1.0.0"
description = "API for Food Orders"
authors = ["v3nuxi$ <example@email.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.0"
djangorestframework = "^3.14"
djangorestframework-simplejwt = "^5.3"
drf-spectacular = "^0.27"
psycopg2-binary = "^2.9"
celery = "^5.3"
redis = "^5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"